<resources>
    <string name="app_name">CrewMail</string>
    <string name="mailActivity_message_download_apk">설치 파일을 다운로드 중입니다.\n잠시만 기다려주세요.</string>
    <string name="loginActivity_message_wrong_server_site">서버에 접속할 수 없습니다.</string>
    <string name="string_server_site">Group(Company) ID</string>
    <string name="login_username">Personal ID</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log In</string>
    <string name="string_sign_up">Create a new Group(Company)</string>
    <string name="login_Required">Required</string>
    <string name="sign_up_suggest">Haven\'t you your Group(Company) ID yet?</string>
    <string name="enter_your_email">Mail address</string>
    <string name="register">Send</string>
    <string name="sign_up_note">Enter your mail address.</string>
    <string name="sign_up_note2">We will send a link to create a new group(company) on CrewCloud.</string>
    <string name="title_sign_up_screen">Create a new Group(Company)</string>
    <string name="save">Save</string>
    <string name="calendar">Calendar</string>
    <string name="date_picker_title">Time</string>
    <string name="time_picker_title">Select Time</string>
    <string name="dialog_are_you_sure">Are you sure ?</string>
    <string name="dialog_logout">Log out</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="profle">My Profile</string>
    <string name="setting_general">General Settings</string>
    <string name="setting_notification">Notification Settings</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_general_download_path_label">Download Path</string>
    <string name="setting_general_download_path_default">/storage/CrewMail/download/</string>
    <string name="setting_general_set_password_code">Set Passcode</string>
    <string name="setting_general_change_password_code">Change Passcode</string>
    <string name="setting_general_adjust_to_screen_width">Adjust to Screen Width</string>
    <string name="personal_id">PERSONAL ID</string>
    <string name="email">EMAIL</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="setting_notification_new_mail">Get Notify of new mail</string>
    <string name="setting_notification_method_label">Notification method</string>
    <string name="setting_notification_sound">Sound</string>
    <string name="setting_notification_vibrate">Vibrate</string>
    <string name="setting_notification_time_label">Notification time</string>
    <string name="setting_notification_time">Notification time</string>
    <string name="setting_notification_from_time">AM 08:00</string>
    <string name="setting_notification_to_time">PM 19:00</string>
    <string name="setting_notification_time_error">End time must be bigger than start time.</string>
    <string name="auto_login_button_yes">Yes</string>
    <string name="auto_login_button_no">No</string>
    <string name="auto_login_company_ID">Group ID&#160;&#160;&#160;&#160;&#160;&#160;:&#160;</string>
    <string name="auto_login_user_ID">Personal ID&#160;:&#160;</string>
    <string name="auto_login_title">Auto Login</string>
    <string name="auto_login_text">You have already logged in to CrewCloud service.​ Would you log in as the above account?​</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="pin_title_1">Set Passcode</string>
    <string name="pin_title_2">Remove Passcode</string>
    <string name="pin_title_3">Change Passcode</string>
    <string name="pin_title_4">Input Passcode</string>
    <string name="pin_instruction_1_1">Please enter your passcode.</string>
    <string name="pin_instruction_1_2">Please enter your passcode again.</string>
    <string name="pin_instruction_2_1">Please enter your passcode.</string>
    <string name="pin_instruction_3_1">Please enter your current passcode.</string>
    <string name="pin_instruction_3_2">Please enter your passcode.</string>
    <string name="pin_instruction_3_3">Please enter your passcode again.</string>
    <string name="pin_instruction_4_1">Please enter your passcode.</string>
    <string name="pin_instruction_error">The passcode is incorrect.Please try again.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_error">Can Not Connect To Server</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="copy_right_string">CopyRight © 2015 DaZone Tech., INC.</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="slash_string"> / </string>
    <string name="have_no_id"> Have no UserID </string>
    <string name="string_help">Help</string>
    <string name="loading_title">Loading...</string>
    <string name="loading_content">Please wait.</string>
    <string name="string_error_code_2">Invalid User ID</string>
    <string name="string_error_code_3">Invalid Pasword</string>
    <string name="string_error_code_4">User left</string>
    <string name="string_error_code_5">Access Deny</string>
    <string name="string_error_code_9">Can not detected Error</string>
    <string name="string_error_code_default">Server Error</string>
    <string name="login_empty_input">%s cannot be empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_connection_error">No Internet Connection</string>
    <string name="no_wifi_error">Please turn on wifi to continue </string>
    <string name="string_wrong_server_site">Wrong Server Site</string>
    <string name="exception_error">Can\'t get data because of exception</string>
    <string name="favorite">Favorite</string>
    <string name="default_box">My mail</string>
    <string name="tagged_mail">Tagged mails</string>
    <string name="received_box">Received</string>
    <string name="sent_box">Sent</string>
    <string name="quit_confirm">Press back again to exit.</string>
    <string name="string_title_compose_email">Compose Email</string>
    <string name="string_title_mail_create_from">From</string>
    <string name="string_title_mail_create_to">To</string>
    <string name="string_title_mail_create_cc">Cc</string>
    <string name="string_title_mail_create_bcc">Bcc</string>
    <string name="string_title_mail_create_subject">Subject</string>
    <string name="string_title_mail_create_acount_1">Thanh Tung phamthanhtung@dazone.co.kr</string>
    <string name="string_title_mail_create_acount_2">phamthanhtung2990@gmail.com</string>
    <string name="string_title_mail_create_attach_name">dazone tech file crew_time card and crew note and crew mail.zip</string>
    <string name="string_title_mail_create_attach_size">(20MB)</string>
    <string name="string_title_mail_create_ok">OK</string>
    <string name="string_title_mail_create_cancel">Cancel</string>
    <string name="string_title_mail_create_error">You need to input To address information.</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="check_all">Check all</string>
    <string name="set_unread">Set unread</string>
    <string name="move_to">Move to</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="string_title_mail_detail_date">Date</string>
    <string name="string_title_mail_detail_more_detail">More details</string>
    <string name="search">Search</string>
    <string name="string_mail_detail_less">Less details</string>
    <string name="string_mail_detail_me">me</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="update_data_error">Update error due to unexpected reason</string>
    <string name="string_mail_create_quote">Quotes</string>
    <string name="string_success">Update data success</string>
    <string name="string_alert_delete_mail">Are you remove this email?</string>
    <string name="string_alert_download_mail">Are you download this file?</string>
    <string name="mark_as_important">Mark as important</string>
    <string name="mark_not_important">Mark not important</string>
    <string name="deleting">Deleting....</string>
    <string name="logout">Log out</string>
    <string name="please_wait">Please wait....</string>
    <string name="string_update">Update</string>
    <string name="string_update_content">This Version is lower than current version, please update</string>
    <string name="string_title_mail_create_priority">Priority</string>
    <string name="priority_none">None</string>
    <string name="priority_high">High</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_low">Low</string>
    <string name="string_alert_send_mail_fail">This mail not send. %1$d file is uploading Please waiting.</string>
    <string name="string_alert_send_mail_success">Mail send success.</string>
    <string name="string_alert_update">Currently, this functionality is under developing, will update in the future..</string>
    <string name="string_alert_send_mail_fail_upload">This mail not send. %1$d file is uploading Please waiting.</string>
    <string name="wating_app_download">File downloading, please wait </string>
    <string name="string_title_mail_detail_reply">Reply</string>
    <string name="string_title_mail_detail_reply_all">Reply All</string>
    <string name="string_title_mail_detail_forward">Forward</string>
    <string name="string_title_mail_original">--------- Original Message ---------</string>
    <string name="string_title_mail_send">Send</string>
    <string name="company">Company</string>
    <string name="search_field_empty">Please input keyword.</string>
    <string name="moving">Moving...</string>
    <string name="string_title_mail_detail_resend">ReSend</string>
    <string name="string_title_mail_read">Mail Read</string>
    <string name="string_title_mail_un_read">Mail Unread</string>
    <string name="string_title_mail_important">Important Mail</string>
    <string name="string_title_mail_attach">Attached Mail</string>
    <string name="string_title_mail_all">All Mail</string>
    <string name="string_title_mail_from_address">From Address</string>
    <string name="string_title_mail_sender_name">Sender\'s Name</string>
    <string name="string_title_mail_to">To</string>
    <string name="string_title_mail_subject">Subject</string>
    <string name="string_title_menu_name">From Name</string>
    <string name="string_title_menu_to">To</string>
    <string name="string_title_menu_title">Title</string>
    <string name="string_title_menu_reg_date">Date Received</string>
    <string name="string_title_menu_size">Size</string>
    <string name="string_title_menu_important">Important</string>
    <string name="string_title_menu_read">Read Date</string>
    <string name="string_title_menu_file">File Count</string>
    <string name="string_title_menu_inbox">In Box</string>
    <string name="string_title_menu_sortbox">Sorted Mails</string>
    <string name="string_title_menu_outbox">Out Box</string>
    <string name="string_title_mail_no_tag">No Tag</string>
    <string name="string_title_menu_none">None</string>
    <string name="string_title_menu_content">Content</string>
    <string name="string_title_menu_to_re">To_Receive</string>
    <string name="string_title_menu_to_cc">To_Cc</string>
    <string name="string_title_menu_to_bcc">To_Bcc</string>
    <string name="menu_sort_as">Ascend</string>
    <string name="menu_sort_ds">Descend</string>
    <string name="menu_save_pdf">Save Pdf</string>
    <string name="string_and">and</string>
    <string name="string_person">person</string>
    <string name="string_today">Today</string>
    <string name="menu_tag">Tag</string>
</resources>