<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMailDetail"
        android:icon="@drawable/navbar_reply_ic"
        android:title="Reply"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/menuMailDetailReply"
                android:title="@string/string_title_mail_detail_reply"></item>
            <item android:id="@+id/menuMailDetailReplyAll"
                android:title="@string/string_title_mail_detail_reply_all"></item>
            <item android:id="@+id/menuMailDetailForward"
                android:title="@string/string_title_mail_detail_forward"></item>
        </menu>
    </item>
    <item
        android:id="@+id/menuMailDetailDelete"
        android:icon="@drawable/navbar_delete_ic"
        android:title="Delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuMailDetailIsRead"
        android:icon="@drawable/navbar_mail_ic"
        android:title="Read"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_list_set_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/set_unread"
        app:showAsAction="always" >
        <menu>
            <item android:id="@+id/menu_filter_address" android:title="@string/string_title_mail_from_address"/>
            <item android:id="@+id/menu_filter_sender" android:title="@string/string_title_mail_sender_name"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuMailDetailMore"
        android:icon="@drawable/navbar_more_ic"
        android:title="More"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/menuMailDetailMoveTo"
                android:title="@string/move_to"></item>
            <!--<item android:id="@+id/menuMailDetailSavePdf"-->
                <!--android:title="@string/menu_save_pdf"></item>-->
        </menu>
        </item>
</menu>