<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- TITTLE -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/Button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/padding_block"
            android:scaleType="center"
            android:src="@drawable/ic_keyboard_backspace_white_24dp" />

        <TextView
            style="@style/SettingRow"
            android:layout_toRightOf="@+id/btn_back"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/setting_general"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <!-- DOWNLOAD PATH -->
    <RelativeLayout
        style="@style/SettingRow"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/tv_download_path_label"
            style="@style/SettingRow"
            android:layout_width="wrap_content"
            android:padding="@dimen/padding_block"
            android:text="@string/setting_general_download_path_label" />

        <TextView
            style="@style/SettingRow"
            android:layout_width="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_download_path_label"
            android:gravity="right|center_vertical"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/padding_block"
            android:singleLine="true"
            android:text="@string/setting_general_download_path_default"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <!-- SET PASS CODE-->
    <RelativeLayout
        android:id="@+id/layout_set_pass_code"
        style="@style/SettingRow"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/padding_block">

        <TextView
            android:id="@+id/activity_setting_general_tv_set_passcode"
            style="@style/SettingRow"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/padding_block"
            android:text="@string/setting_general_set_password_code" />

        <ImageView
            android:id="@+id/status_set_passcode"
            android:layout_width="@dimen/general_setting_icon"
            android:layout_height="@dimen/general_setting_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/bg_circle_blue"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/ic_done_white_48dp" />

    </RelativeLayout>

    <View style="@style/Divider" />

    <!-- CHANGE PASS CODE -->
    <LinearLayout
        android:id="@+id/layout_change_passcode"
        style="@style/SettingRow"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            style="@style/SettingRow"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/padding_block"
            android:text="@string/setting_general_change_password_code" />

    </LinearLayout>

    <View style="@style/Divider" />

    <!-- ADJUST TO SCREEN WIDTH -->
    <RelativeLayout
        android:id="@+id/layout_adjust"
        style="@style/SettingRow"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/padding_block">

        <TextView
            style="@style/SettingRow"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/padding_block"
            android:text="@string/setting_general_adjust_to_screen_width" />

        <ImageView
            android:id="@+id/status_adjust"
            android:layout_width="@dimen/general_setting_icon"
            android:layout_height="@dimen/general_setting_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/bg_circle_blue"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/ic_done_white_48dp" />

    </RelativeLayout>

    <View style="@style/Divider" />


</LinearLayout>